# av

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
prompts/: dense_caption.md
samples/: README.md
samples/epstein-cctv/: .gitignore  README.md  subset.json
samples/epstein-cctv/hf-dataset/: README.md  all_artifacts.jsonl  captions.jsonl  reports.jsonl  transcripts.jsonl
samples/epstein-cctv/hf-space/: README.md  app.py  requirements.txt
skills/agentic-video-memory/: SKILL.md
src/av/: __init__.py  __main__.py
src/av/cli/: app.py  ask.py  config_cmd.py  export.py  info.py  ingest.py  list_cmd.py  open_cmd.py  output.py  search.py  sentinel.py  sentinel_doctor.py  transcript.py
src/av/core/: config.py  constants.py  exceptions.py
src/av/db/: connection.py  models.py  repository.py  schema.py
src/av/pipeline/: cascade.py  chunker.py  dense_caption.py  ffmpeg.py  ingest.py  sentinel.py
src/av/providers/: base.py  openai.py
src/av/search/: rag.py  semantic.py
src/av/utils/: hashing.py  principles.py  video.py  youtube.py
tests/: test_cascade.py  test_config.py  test_ingest_degradation.py  test_provider.py
