[project]
name = "pixelml-av"
version = "0.1.0"
description = "Index once, search many — agentic video memory CLI by Pixel ML"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Pixel ML", email = "hello@pixelml.com" }]
keywords = ["video", "search", "rag", "agentic", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.7.0",
    "openai>=1.50.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
accel = ["sqlite-vec>=0.1.6"]
dev = ["pytest>=8.0.0"]

[project.scripts]
av = "av.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/av"]
